link script correction

--- a/interface.html
+++ b/interface.html
@@ -18,6 +18,6 @@
         <button type="button" onclick="predictPrice()">Prédire le prix</button>
     </form>
     <div id="result"></div>
-    <script src="C:\Users\USER\Desktop\Industrialisation\static_site\script.js"></script>
+    <script src="script.js"></script>
 </body>
 </html>
